# aether-android

./: .gitignore  README.fa.md  README.md
.github/workflows/: build.yml
app/: aether.keystore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aether_jni.cpp
app/src/main/java/com/aether/app/: AboutActivity.kt  KeepAliveService.kt  LogsActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/aether/app/core/: AetherManager.kt  ConfigManager.kt  NativeCore.kt  ProxyChainer.kt  Tun2SocksManager.kt
app/src/main/java/com/aether/app/model/: AetherConfig.kt
app/src/main/java/com/aether/app/service/: AetherVpnService.kt  ConnectionLog.kt
app/src/main/res/drawable/: btn_primary.xml  chip_selected.xml  chip_unselected.xml  circle_connected.xml  circle_connecting.xml  circle_disconnected.xml  ic_power.xml  input_bg.xml  spinner_bg.xml
app/src/main/res/layout/: activity_about.xml  activity_logs.xml  activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  spinner_style.xml  themes.xml
app/src/main/res/values-night/: colors.xml
scripts/: cross-compile.sh
